third_party/WebKit/Source/WebKit2/UIProcess/win/WebView.h
@@ -28,6 +28,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #define WebView_h
 
 #include "APIObject.h"
+#include "CoalescedWindowGeometriesUpdater.h"
 #include "PageClient.h"
 #include "WKView.h"
 #include "WebPageProxy.h"
@@ -275,7 +276,7 @@ private:
 
     bool m_gestureReachedScrollingLimit;
 
-    HashMap<HWND, WindowGeometry> m_childWindowGeometriesToUpdate;
+    CoalescedWindowGeometriesUpdater m_geometriesUpdater;
 
 #if ENABLE(FULLSCREEN_API)
     OwnPtr<WebCore::FullScreenController> m_fullScreenController;
